Fixed signup and header card split layout bug on frontend
No ref

--- a/ghost/core/core/frontend/src/cards/css/signup.css
+++ b/ghost/core/core/frontend/src/cards/css/signup.css
@@ -86,6 +86,7 @@
 /* Split layout image */
 
 .kg-signup-card-content .kg-signup-card-image {
+    width: 100%;
     /* this will force the image to follow the signup card height */
     height: 0;
     min-height: 100%;
